public/css/styles.css
/* ... */
/* ///////////// FOR ACTIVITY AND INTERACTION ////////////////// */
.activity {
    margin-top: 1em;
    flex-direction: column;
}

.case-content {
    /* visibility: hidden; */
}

.module-slide {
    display: none;
    /* margin: 0 2em; */
}

.module-slide .case-content:first-of-type {
    visibility: visible;
}

.module-slide p {
    padding: 0.5em 0;
}

.module-slide h1 {
    margin: 0 0 0.5em 0;
}


/* //////////////////// NAVIGATION TAB //////////////// */
#navigation-tab {
    display: flex;
    justify-content: space-around;
    align-items: center;
    grid-area: Nav;
}

#navigation-tab, #oe header, #interaction header, #explanation header {
    background-color: #e7e7e7;
    border-bottom: 5px solid var(--module-colour);
}

#navigation-tab a {
    text-decoration: none;
    font-weight: 600;
    font-size: 16px;
    color: #c4c4c4;
    transition-duration: 0.2s;
    cursor: pointer;
}

#navigation-tab a:hover {
    color: black;
}


/* /////////// DIV FOR MODEL TO RENDER IN //////////// */

#heart-model:focus {
    outline-width: 0;
}

.model-label {
    /* padding:  0.5em 0.75em; */
    background-color: white;
}

.model-label:hover {
    cursor: pointer;
    color: blue;
}

.model-label::after {
    content: "";
    position: absolute;
    top: 99%; /* At the bottom of the tooltip */
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: white transparent transparent transparent;
  }

/* ////////// STEPS/INSTRUCTIONS FOR HOW TO INTERACT ////////////// */
.step {
    display: none;
    flex-direction: column;
}

.step strong {
    font-size: 18px;
    font-weight: 700;
}

.step:first-of-type {
    display: flex;
}

#refer-to-specimen {
    font-size: 18px;
    font-weight: 700;
    font-style: none;
}

/* //////////////// MODEL TOGGLES (DEPENDS ON WHAT WE NEED THIS WILL CHANGE) ////////////////// */
#toggles {
    display: none;
    flex-wrap: nowrap;
    position: absolute;
    margin-top: 63px;
    z-index: 100;
    right: calc(30vw - 42px);
}

/* CHANGED THIS FOR THE TOGGLE LABEL */
h5 {
    font-weight: 400;
    font-size: 16px;
    margin-top: -13px;
    margin-bottom: 5px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;

    text-transform: uppercase;
    font-weight: 800;
    color: white;
}

#model-toggles {
    margin: 1em 0;
}

input:checked + label[for="on"] {
    background-color: #54d160;
}

input {
    width: 0;
    visibility: hidden;
    margin: 0;
    padding: 0;
}

label:first-of-type {
    border-radius: 3px 0 0 3px;
    border-right: 1px solid #ddd;
}

label:last-of-type {
    border-radius: 0 3px 3px 0;
    border-left: 1px solid #eeeeee;
}

label {
    background-color: #eeeeee;
    padding: 0.3em 1em;
    font-size: 16px;
}

label:hover {
    background-color: #eeeeee;
}

input:checked + label {
    background-color:black;
    color: white;
}

label[for="segments"]{
    position: relative;
    right: 11px;
}

label[for="realistic"] {
    position: relative;
    right: 23px;
}

label[for="off"] {
    position: relative;
    right: 12px;
}

/* FANCY TOGGLES */
#switch {
    position: relative;
    display: inline-block;
    width: 32px;
    height: 1px;
    border: none;
    background-color: transparent;
    border: 8px solid white;
    border-radius: 20px;
    filter: drop-shadow(1px 1px 1px rgba(0,0,0,0.5));
    /* margin-top: 0.2em; */
  }
  
  #switch input { 
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 18px;
    width: 18px;
    left: -2px;
    bottom: -3.5px;
    background-color: #bdbdbd;
    /* border: 2px solid black; */
    -webkit-transition: .3s;
    transition: .3s;
  }
  
  input:checked + .slider {
    background-color: #6FCF97;
  }

  input:checked + .slider:before {
    background-color: rgb(93, 177, 128);
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(50px);
    -ms-transform: translateX(50px);
    transform: translateX(50px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }
/* FANCY TOGGLES */
/* ///////////////// PLACEHOLDER and IMAGES //////////////// */

.chest-xr {
    width: 100%;
    padding: 0;
}

#case-content-button {
    display: flex;
    margin: auto;
    z-index: 30;
    transition-duration: 0.001s;
}

#case-content-button img{
    width: 50px;
    padding: 0;

    margin-left: -2em;
    position: fixed;
    /* top: 10vh; */
    bottom: calc(2em + 68px);
}

/* COLLAPSE BUTTON */
#collapse-button {
    position: absolute;
    visibility: hidden;
    top: 17vh;
    left: 34.5vw;
    z-index: 3;
    transition-duration: 0s;
    filter: none;
    -webkit-filter: none;
}

#collapse-button > img {
    width: 10vw;
}

#collapse-button #collapse-button-arrows {
    width: 2vw;
    position: relative;
    top: -3.5vw;
    left: -4vw;
    transition-duration: 0.3s;
    transform: rotateZ(0deg);
}

#collapse-button:before{
    position: absolute;
    content: "";
    width: 5.5vw;
    height: calc(100% + 10px);
    left: 0;
    top: -5px;
    background: white;
    filter: none;
}


/* ////////////////// INTERACTION: REVIEW INFORMATION MODAL ///////////////////// */
.no-modal {
    display: none;
}

.show-modal {
    background-color: rgba(0,0,0,0.4);
    display: grid;
    grid-template-rows: 45px 1fr;
    grid-template-columns: 180px 110px 1fr;
    grid-template-areas: "Examination ChestXR ." "Information Information Information";
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 10;
}
/* ... */

